# docs/swagger.json
@@ -182,7 +182,7 @@
                     "description": "@Description List of predicted actions in Uzbek language",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/models.Prediction"
                     }
                 }
             }
@@ -196,10 +196,24 @@
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "predicted_actions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "video_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Prediction": {
+            "type": "object",
+            "properties": {
+                "confidence": {
                     "type": "string"
                 },
-                "video_id": {
+                "label": {
                     "type": "string"
                 }
             }
